# delfino-demo

./: CHANGELOG.md  README.md  pyproject.toml
.circleci/: config.yml
tests/: conftest.py
tests/integration/: test_plugin.py
tests/unit/: test_demo_command.py
